fix spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -159,11 +159,11 @@
   }
   
   h2 {
-    @apply font-bold text-2xl md:text-2xl sm:text-2xl mx-6 items-center;
+    @apply font-bold text-2xl md:text-2xl sm:text-2xl items-center;
   }
   
   h3 {
-    @apply text-lg font-semibold text-gray-900 dark:text-white mb-3;
+    @apply text-lg font-semibold text-gray-900 dark:text-white;
   }
   
   h4 {
